# DirectShell

./: .gitignore  ARCHITECTURE.md  BLOG_DAY3.md  BRAINSTORM.md  CHANGELOG.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  LLM_GUIDE.md  README.md  build.rs  gen_icon.py
Dokumentation/: ARCHITECTURE.md  PAPER.md
ds-mcp/: server.py  tip_engine.py  tip_miner.py
ds-mcp/tips/: _candidates.jsonl  _universal.jsonl  discord.jsonl  google_chrome.jsonl  google_chrome_apps.jsonl  google_chrome_sheets.jsonl  notepad.jsonl
src/: main.rs
